--- a/homework/week19/exercises/package.json
+++ b/homework/week19/exercises/package.json
@@ -11,6 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"morgan": "^1.10.0",
+		"nanoid": "^3.3.4"
 	}
 }
